# kanbancraft

./: README.md  package-lock.json
kanbancraft_client/: README.md  package-lock.json  package.json
kanbancraft_client/src/: Router.jsx  index.css  main.jsx
kanbancraft_client/src/api/: api_board.js  api_column.js  api_project.js  api_task.js  api_user.js  instance.js
kanbancraft_client/src/components/common/kanban/: Acording.jsx  AddDesk.jsx  AddProject.css  AddProject.jsx  KanbanBackground.jsx  KanbanHeader.css  KanbanHeader.jsx  KanbanLayout.jsx  KanbanSidebar.jsx  acording.css  avatar.css  avatar.jsx  kanban.css  selectedBoard.jsx
kanbancraft_client/src/components/common/landing/: LandingHeader.jsx  LandingLayout.jsx  header.css  layout.css
kanbancraft_client/src/pages/: AccountPage.jsx  BoardPage.jsx  KanbanPage.jsx  LandingPage.jsx  LoginPage.jsx  RegisterPage.jsx  accountPageStyle.css  boardPage.css  form.css  other.css  page.css
kanbancraft_client/src/utils/: auth.js
kanbancraft_server/: README.md  pyproject.toml
kanbancraft_server/app/: .env  main.py
kanbancraft_server/app/database/: __init__.py  boards_router.py  columns_router.py  drop_base.py  models.py  mongo_db_script.py  mongodb_functions.py  projects_router.py  routers.py  tasks_router.py  test.py  testlog.txt  users_router.py
kanbancraft_server/app/database/endpoints/: boards_router.py  columns_router.py  projects_router.py  tasks_router.py  users_router.py
